# jct-discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Contributing.md  README.md  bot.py  config.py  contributing.md  fly.toml  ids.csv  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  style_guide.md
.github/workflows/: contributor_list.yml  lint.yml
database/: campus.py  channel_message.py  config.py  group.py  preloaded.py  sql_fetcher.py
database/campus/: __init__.py  campus.py
database/channel_message/: __init__.py  channel_message.py
database/group/: group.py
database/person/: person.py
database/sql/: __init__.py  delete.py  insert.py  select.py  util.py
modules/: admin_symbol_cog.py  new_user_cog.py  piglatin_cog.py  ping.py  ping_cog.py
modules/AddCourseChannel/: add_course.py  cog.py
modules/admin_symbol/: admin_symbol.py
modules/calendar/: calendar.py  calendar_creator.py  calendar_embedder.py  calendar_finder.py  calendar_service.py  class_parse_error.py  class_role_error.py  cog.py  course_mentions.py  default_title.py  event.py  event_formatter.py  group_role_error.py  html_parser.py  md_html_converter.py
modules/channel_opting/: channel_message_manager.py  cog.py
modules/course_management/: cog.py  course_activator.py  course_adder.py  course_deleter.py  util.py
modules/create_class/: campus.py  class.py  class_.py  class_channel_creator.py  class_creator.py  cog.py
modules/create_group/: cog.py  group_channel_creator.py  group_creator.py  new_group.py
modules/drive/: cog.py  drive_service.py
modules/drive_commands/: cog.py  discord_components.py  drive_class.py
modules/email_registry/: categoriser.py  cog.py  email_adder.py  email_finder.py  person.py  sql_path.py  (+5 more)
utils/: embedder.py  ids.csv  mention.py  reactions.py  sql_fetcher.py  utils.py
(+115 files in other folders)
